added train partners

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 {% include about.html %}
 {% include achivement.html %}
 {% include latest_projects.html %}
-{% include pricing.html %}
+<!-- {% include pricing.html %} -->
 {% include testimonials.html %}
-{% include latest_blog_posts.html %}
+<!-- {% include latest_blog_posts.html %} -->
 {% include contact_area.html %}
