--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@ page_header_image: "/assets/images/page_header_3.jpg"
 
 {% include workflow.html %}
 
-{% include pricing.html %}
+<!-- {% include pricing.html %} -->
 
 {% include testimonials.html %}
 
