make experience partner

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: "About Me"
 
 {% include page_header.html %}
 {% include about.html section_class="about_v2" %}
-{% include our_skills.html %}
+<!-- {% include our_skills.html %} -->
 {% include our_experience.html %}
 {% include testimonials.html %}
 {% include latest_blog_posts.html %}
