--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@ page_header_image: "/assets/images/page_header_3.jpg"
 
 {% include services_2.html %}
 
-{% include workflow.html %}
+<!-- {% include workflow.html %} -->
 
 <!-- {% include pricing.html %} -->
 
