refined about page

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page_header_image: "/assets/images/page_header.jpg"
-title: "About Me"
+title: "当社について"
 ---
 
 {% include page_header.html %}
@@ -9,5 +9,5 @@ title: "About Me"
 <!-- {% include our_skills.html %} -->
 {% include our_experience.html %}
 {% include testimonials.html %}
-{% include latest_blog_posts.html %}
+<!-- {% include latest_blog_posts.html %} -->
 {% include contact_area.html %}
