--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page_header_image: "/assets/images/page_header.jpg"
-title: "当社について|セレンディピティ株式会社"
+title: "当社について"
 ---
 
 {% include page_header.html %}
