--- a/portfolios.html
+++ b/portfolios.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "海外電車とバスの予約ビジネス"
+title: "{{site.data.data.train_busines_title}}"
 ---
 
 {% include page_header.html %}
