fixed title and cover photo

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-page_header_image: "/assets/images/page_header.jpg"
-title: "当社について"
+page_header_image: "/assets/images/page_header_3.jpg"
+title: "About Us"
 ---
 
 {% include page_header.html %}
