--- a/privacy.html
+++ b/privacy.html
@@ -1,69 +1,67 @@
-
 <h1>
-隱私權政策
+Privacy Policy
 </h1>
-<p>為了讓您能夠安心的使用本網站Serendipity APP的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：</p>
+<p>To ensure your peace of mind in using the services and information provided by the Serendipity APP website, we hereby explain our website's privacy protection policy to safeguard your rights and interests. Please read the following content:</p>
 <h3>
-一、隱私權保護政策的適用範圍
+I. Scope of Application of Privacy Protection Policy
 </h3>
 <p>
-隱私權保護政策內容，包括本網站如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本網站以外的相關連結網站，也不適用於非本網站所委託或參與管理的人員。
+The content of the privacy protection policy includes how this website handles personal identification information collected during your use of the website services. The privacy protection policy does not apply to related linked websites outside of this website, nor does it apply to personnel not commissioned or involved in the management of this website.
 </p>
 <h3>
-二、個人資料的蒐集、處理及利用方式
+II. Collection, Processing, and Utilization of Personal Data
 </h3>
 <p>
-當您造訪本網站或使用本網站所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本網站不會將個人資料用於其他用途。
-本網站在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。
-於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，決不對外公佈。
-為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。
+When you visit this website or use the functional services provided by this website, we may ask you to provide necessary personal data depending on the nature of the service. We will process and utilize your personal data within the scope of the specific purpose; without your written consent, we will not use personal data for other purposes.
+When you use interactive functions such as service mailboxes or questionnaires on this website, we will retain the information you provide, including your name, email address, contact information, and usage time.
+During general browsing, the server will automatically record relevant actions, including the IP address of your connection device, usage time, browser used, browsing and clicking data records, etc., as a reference basis for us to improve website services. This record is for internal use only and will never be disclosed externally.
+To provide accurate services, we may conduct statistical analysis of the contents of questionnaires collected, presenting statistical data or explanatory text, which, besides being used for internal research, may be published as needed but without involving specific personal data.
 </p>
 <h3>
-三、資料之保護
+III. Data Protection
 </h3>
 <p>
-本網站主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。
-如因業務需要有必要委託其他單位提供服務時，本網站亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。
+The main server of this website is equipped with information security equipment such as firewalls and antivirus systems, as well as necessary security protection measures, to protect the website and your personal data. Strict protection measures are adopted, and only authorized personnel can access your personal data. Related personnel handling the data have signed confidentiality agreements, and those who violate confidentiality obligations will be subject to relevant legal sanctions.
+When it is necessary to entrust other units to provide services due to business needs, this website will also strictly require them to comply with confidentiality obligations and take necessary inspection procedures to ensure that they will indeed comply.
 </p>
 <h3>
-四、網站對外的相關連結
+IV. Related Links on the Website
 </h3>
 <p>
-本網站的網頁提供其他網站的網路連結，您也可經由本網站所提供的連結，點選進入其他網站。但該連結網站不適用本網站的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。
+The web pages of this website provide links to other websites, and you can also click on links provided by this website to enter other websites. However, the privacy protection policy of this website does not apply to linked websites. You must refer to the privacy protection policies of the linked websites.
 </p>
 <h3>
-五、與第三人共用個人資料之政策
+V. Policy on Sharing Personal Data with Third Parties
 </h3>
 <p>
-本網站絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。
+This website will never provide, exchange, rent, or sell any of your personal data to other individuals, groups, private companies, or government agencies, except where there is a legal basis or contractual obligations.
 </p>
-<h3>前項但書之情形包括不限於：</h3>
+<h3>Exceptions to the preceding paragraph include but are not limited to:</h3>
 <p>
-經由您書面同意。
-</p>
-<p>
-法律明文規定。
+With your written consent.
 </p>
 <p>
-為免除您生命、身體、自由或財產上之危險。
+As stipulated by law.
 </p>
 <p>
-與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集者依其揭露方式無從識別特定之當事人。
-當您在網站的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。
-有利於您的權益。
+To avoid risks to your life, body, freedom, or property.
 </p>
 <p>
-本網站委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。
+Cooperating with public authorities or academic research institutions for statistical or academic research purposes, provided that the data is processed or collected in a manner that does not identify specific individuals based on how it is disclosed by the provider.
+When your actions on the website violate the terms of service or may harm or impede the rights of the website and other users or cause harm to any person, disclosure of your personal data by the website management unit is necessary to identify, contact, or take legal action.
+In the interests of you.
+</p>
+<p>
+When this website entrusts others to assist in the collection, processing, or utilization of your personal data, it will perform its duty of supervision and management over the entrusted outsourced parties or individuals.
 </p>
 <h3>
-六、Cookie之使用與使用者追蹤
+VI. Use of Cookies and User Tracking
 </h3>
 <p>
-為了提供您最佳的服務，本網站會在您的電腦中放置並取用我們的Cookie，若您不願接受Cookie的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕Cookie的寫入，但可能會導致網站某些功能無法正常執行 。
+To provide you with the best service, this website will place and access our cookies on your computer. If you do not wish to accept the writing of cookies, you can set the privacy level in your browser function to high, which will reject the writing of cookies but may result in certain functions of the website not functioning properly.
 </p>
 <h3>
-七、隱私權保護政策之修正
+VII. Revision of Privacy Protection Policy
 </h3>
-<p> 本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。
+<p> This website's privacy protection policy will be revised at any time in response to demand, and the revised terms will be posted on the website.
 </p>
-	
