--- a/ja/xmove-app.html
+++ b/ja/xmove-app.html
@@ -12,7 +12,7 @@ title: "Xmove - 電車・バス予約アプリ"
 		<div class="row align-items-center">
 			<div class="col-lg-5">
 				<div class="deneb_img_box">
-					<img src="/assets/images/xmove-app-preview.png" class="img-fluid" alt="Xmove アプリプレビュー">
+					<img src="/assets/images/xmove.png" class="img-fluid" alt="Xmove アプリ">
 				</div>
 			</div>
 			<div class="col-lg-7">
