--- a/xmove-app.html
+++ b/xmove-app.html
@@ -12,7 +12,7 @@ title: "Xmove - Train & Bus Booking App"
 		<div class="row align-items-center">
 			<div class="col-lg-5">
 				<div class="deneb_img_box">
-					<img src="/assets/images/xmove-app-preview.png" class="img-fluid" alt="Xmove App Preview">
+					<img src="/assets/images/xmove.png" class="img-fluid" alt="Xmove App">
 				</div>
 			</div>
 			<div class="col-lg-7">
