added 海外電車 apple store download

--- a/ja/xmove-app.html
+++ b/ja/xmove-app.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page_header_image: "/assets/images/page_header_3.jpg"
-title: "Xmove - 電車・バス予約アプリ"
+title: "海外電車 - もっと簡単に、もっと遠く"
 ---
 
 {% include page_header.html %}
@@ -17,15 +17,15 @@ title: "Xmove - 電車・バス予約アプリ"
 			</div>
 			<div class="col-lg-7">
 				<div class="deneb_content_box">
-					<h2>Xmove - 電車・バス予約アプリ</h2>
-					<p>ヨーロッパとアジアの鉄道予約の究極のアプリ。Xmoveは、ヨーロッパとアジアの60,000以上の都市をカバーする国際列車チケット検索・予約のワンストップソリューションを提供します。</p>
+					<h2>海外電車 - 電車・バス予約アプリ</h2>
+					<p>ヨーロッパとアジアの鉄道予約の究極のアプリ。海外電車は、ヨーロッパとアジアの60,000以上の都市をカバーする国際列車チケット検索・予約のワンストップソリューションを提供します。</p>
 					<p>トップ鉄道会社からのリアルタイム価格を比較し、よりスマートな旅行体験を楽しみながら、最高の価値のあるチケットを素早く予約できます。</p>
 					
 					<div class="app_features">
-						<h4>Xmoveを選ぶ理由</h4>
+						<h4>海外電車アプリを選ぶ理由</h4>
 						<ul class="feature_list">
 							<li><i class="fas fa-check-circle"></i> シンプルなインターフェース：数回のタップでチケットを安全に予約</li>
-							<li><i class="fas fa-check-circle"></i> 28言語対応：世界中のユーザーに対応</li>
+							<li><i class="fas fa-check-circle"></i> 日本語対応：世界中のユーザーに対応</li>
 							<li><i class="fas fa-check-circle"></i> リアルタイム更新：スケジュールを確認し、価格を即座に比較</li>
 							<li><i class="fas fa-check-circle"></i> Eチケットサービス：チケットをダウンロードし、注文を簡単に管理</li>
 							<li><i class="fas fa-check-circle"></i> グループ予約：家族やグループ向けのカスタマイズされた割引を楽しむ</li>
@@ -38,7 +38,7 @@ title: "Xmove - 電車・バス予約アプリ"
 						<a href="https://play.google.com/store/apps/details?id=com.wowsei.mobile" target="_blank" class="deneb_btn download_btn">
 							<i class="fab fa-google-play"></i> Google Playでダウンロード
 						</a>
-						<a href="https://apps.apple.com/us/app/xmove-train-bus-booking/id6730126140" target="_blank" class="deneb_btn download_btn">
+						<a href="https://apps.apple.com/us/app/%E6%B5%B7%E5%A4%96%E9%9B%BB%E8%BB%8A/id6753916773" target="_blank" class="deneb_btn download_btn">
 							<i class="fab fa-apple"></i> App Storeでダウンロード
 						</a>
 					</div>
@@ -86,7 +86,6 @@ title: "Xmove - 電車・バス予約アプリ"
 					<h4>アジア</h4>
 					<ul>
 						<li><strong>中国：</strong> 中国高速鉄道</li>
-						<li><strong>日本：</strong> JR</li>
 						<li><strong>韓国：</strong> Korail</li>
 						<li><strong>台湾：</strong> 台湾高速鉄道</li>
 					</ul>
