add google play and apple store download links

--- a/ja/xmove-app.html
+++ b/ja/xmove-app.html
@@ -35,11 +35,11 @@ title: "海外電車 - もっと簡単に、もっと遠く"
 					</div>
 					
 					<div class="download_buttons">
-						<a href="https://play.google.com/store/apps/details?id=com.wowsei.mobile" target="_blank" class="deneb_btn download_btn">
-							<i class="fab fa-google-play"></i> Google Playでダウンロード
+						<a href="https://play.google.com/store/apps/details?id=com.serendipity.train.app" target="_blank" class="deneb_btn download_btn">
+							<i class="fab fa-google-play"></i> Google Playで海外電車アプリをダウンロード
 						</a>
 						<a href="https://apps.apple.com/us/app/%E6%B5%B7%E5%A4%96%E9%9B%BB%E8%BB%8A/id6753916773" target="_blank" class="deneb_btn download_btn">
-							<i class="fab fa-apple"></i> App Storeでダウンロード
+							<i class="fab fa-apple"></i> App Storeで海外電車アプリをダウンロード
 						</a>
 					</div>
 				</div>
@@ -93,7 +93,7 @@ title: "海外電車 - もっと簡単に、もっと遠く"
 					<div class="contact_info">
 						<h4>お問い合わせ</h4>
 						<p><strong>ウェブサイト：</strong> <a href="https://www.xmoveapp.com" target="_blank">www.xmoveapp.com</a></p>
-						<p><strong>サポート：</strong> WhatsApp、Line、WeChatで利用可能（詳細はウェブサイトをご覧ください）</p>
+						<p><strong>サポート：</strong> Line、WhatsAppで利用可能（詳細はウェブサイトをご覧ください）</p>
 					</div>
 				</div>
 			</div>
