added front matter to show jp app download page

--- a/ja/xmove-app.html
+++ b/ja/xmove-app.html
@@ -2,6 +2,7 @@
 layout: default
 page_header_image: "/assets/images/page_header_3.jpg"
 title: "海外電車 - もっと簡単に、もっと遠く"
+lang: ja
 ---
 
 {% include page_header.html %}
